# kinetics-endpoint-template

./: Cargo.toml
src/: lib.rs  main.rs
src/basic/: endpoint.rs
