[package]
name = "kinetics-endpoint-template"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.2"
aws-sdk-dynamodb = "1.73.0"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
kinetics-macro = { path = "../macro" }
lambda_http = "0.14.0"
tokio = "1.45.0"
aws-sdk-sqs = "1.66.0"
